Updates from OHC
Signed-off-by: Chris Jackson <chris@cd-jackson.com> (+5 squashed commits)